2004-05-20  Jaka Mocnik  <jaka@gnu.org>

	* ported some bugfixes from gnome-2-6 branch:
	* src/hex-document.[ch]: new signals "undo", "redo" and
	"undo_stack_forget" added.
	* src/hex-document.c: remove all calls to
	hex_document_set_menu_sensitivity(). UI related stuff should be
	abstracted from the HexDocument class. man, was I dumb... instead
	just invoke the new signals.
	* src/hex-document-ui.c (hex_document_set_menu_sensitivity): changed
	to set_doc_menu_sensitivity().
	* src/ghex.h: prototype for set_doc_menu_sensitivity().
	* src/ghex-window.c (ghex_window_load): connect
	set_doc_menu_sensitivity() to all three new signals.
	* all the above together should fix #142220.
	* src/gtkhex.h: removed hex-dialog.h include. moved advanced find
	dialog related typedefs to ghex.h where they belong. fixes #142221.
	
2004-04-26  Adam Weinberger  <adamw@gnome.org>

	* en_CA.po: Added en_CA to ALL_LINGUAS.

2004-04-25  Jaka Mocnik <jaka@gnu.org>

	* applied a patch from Muktha Narayan; prevent a crash when advanced
	find is issued with no file loaded (fixes #131919):
	* findreplace.c (advanced_find_add_cbadvanced_find_add_cb): check if
	there is a document loaded. 
	* ghex-window.c (ghex_window_set_sensitivity): disable AdvanceFind 
	option if there's no document loaded. 
	* applied a patch from Kaushal Kumar to destroy a dialog upon
	response (fixes #131411):
	* ghex-window.c (ghex_window_save_as): Destroy the 'overwrite' 
	message dialog after getting the response.
	Fix bugzilla bug #131411.
	* applied a patch from Vijaykumar Patwari to validate the print
	ranges (fixes #120295):
	* src/ui.c (ghex_print_dialog_response): Removed pji->config
	getting populated.
	(ghex_print_run_dialog): setting the value for pji->config.
	Fixes bug# 120295.
	* applied a patch from Shakti Sen that closes another question dialog.
	fixes #136745:
	* src/ui.c (revert_cb): Destroying the question dialog.
	Fixes bug #136745
	* src/ghex-ui.xml: added About item its stock icon, as suggested by